--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Your Name">
  
 <!-- CSS Stylesheet -->
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
  
 <!--[if lt IE 9]> 
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
