--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset=UTF-8">
 <meta charset="utf-8">
  
-<title>Online Resume of Your Name</title>
+<title>Branden Torma</title>
  
 <!-- Meta -->
 <meta name="description" content="A few lines about yourself">
@@ -35,25 +35,24 @@
  
 <!-- Begin Profile Image Section -->
 <div class="header_1">
-<img src="images/profile.jpg" width="250" height="250" alt="Your Name" />
+<img src="profile.jpg" width="250" height="250" alt="Your Name" />
 </div>
 <!-- End Profile Image Section -->
  
 <!-- Begin Profile Information Section -->
 <div class="header_2">
  
-<h1><span>Your Name</span></h1>
+<h1><span>Branden Torma</span></h1>
 <h3>Web Developer / Designer</h3>
  
 <ul class="info_1">
-<li class="address">555 Street Address, Toledo, Ohio, 43606  U.S.A.</li>
+<li class="address">173 Kivikoski Road, Thunder Bay, Ontario, Canada</li>
 </ul>
  
 <ul class="info_2">
-<li class="phone">(000) 000-0000</li>
-<li class="email"><a href="mailto:your-email@gmail.com">your-email@gmail.com</a></li>
+<li class="phone">(807)632-7879</li>
+<li class="email"><a href="mailto:tormasterjr@mgmail.com">tormasterjr@gmail.com</a></li>
 <li class="site_url"><a href="http://www.webcodepro.net/about.php" title="www.your-website.com">www.your-website.com</a></li>
-<li class="twitter"><a href="http://twitter.com/twitter-screen-name" title="Follow Me on Twitter">@twitter-screen-name</a></li>
 </ul>
  
 </div>
