--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <dd>
  
 <section class="summary">
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+I'm a 3rd year IMD student at Confederation College. 
 </section>
  
 </dd>
@@ -93,16 +93,16 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 <li>HTML5</li>
 <li>PHP</li>
 <li>JavaScript</li>
-<li>Magento</li>
+<li>3DS Max</li>
 <li>WordPress</li>
 </ul>
 <ul class="list2">
 <li>HTML</li>
 <li>CSS</li>
-<li>MySQL</li>
-<li>jQuery</li>
-<li>CMS Made Simple</li>
-<li>Photoshop</li>
+<li>Unity</li>
+<li>Adobe Premiere</li>
+<li>Adobe Illistrator</li>
+<li>Adobe Photoshop</li>
 </ul>
 </section>
  
@@ -160,7 +160,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 <!-- End Experience Section -->
  
 <div class="clear">&nbsp;</div>
- 
+
 <!-- Begin Publications Section -->
 <dl>
 <dt>Publications:</dt>
