--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="header_2">
  
 <h1><span>Branden Torma</span></h1>
-<h3>Web Developer / Designer</h3>
+<h3>Interactive Media Designer</h3>
  
 <ul class="info_1">
 <li class="address">173 Kivikoski Road, Thunder Bay, Ontario, Canada</li>
@@ -123,7 +123,7 @@ I'm a 3rd year IMD student at Confederation College.
  
 <!-- Position #1 -->
  
-<h2 class="top">Web Developer / Designer</h2>
+<h2 class="top">Interactive Media Designer</h2>
 <p class="bus1">Confederation College</p>
 <p class="time">September 2014 &#45; Present</p>
  
