--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=UTF-8">
+<meta charset=UTF-8>
 <meta charset="utf-8">
  
 <title>Branden Torma</title>
@@ -143,8 +143,8 @@ For a brief timeframe, I worked in a group that was tasked with coming up with a
  
  
  
-</dd>
-</dl>
+
+
 <!-- End Experience Section -->
  
 <div class="clear">&nbsp;</div>
@@ -171,8 +171,8 @@ Thunder Bay, ON P7C 4W1, Canada
 <p class="time">2014 &#45; 2017</p>
  
 <p class="edu-info">
-<a href="www.confederationc.on.ca" target="_blank" title="University of Toledo">www.confederationc.on.ca/a>
-</p>
+<a href="www.confederationc.on.ca" target="_blank" title="">www.confederationc.on.ca>
+
  
 </section>
  
@@ -204,11 +204,6 @@ Thunder Bay, ON P7C 4W1, Canada
 </footer>
 <!-- End Footer -->
  
-</div>
-<!-- End Content -->
- 
-</div>
+
 <!-- End Wrapper -->
- 
-</body>
-</html>
+
