--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@ Thunder Bay, ON P7C 4W1, Canada
  
 <!-- Begin Footer Content -->
 <div class="footer_content">
- 
+<p>
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbtorma.github.io%2F">HTML5 validator</a>
+</p>
 <!-- Begin Schema Person -->
  
 <ul class="icons_1">
